# asta-paper-finder

./: .flake8  .gitignore  CONTRIBUTING.md  Makefile  NOTICES.txt  README.md  pyproject.toml  ruff.toml
agents/mabool/api/: .coveragerc  Makefile  dev.sh  pyproject.toml  pytest.ini
agents/mabool/api/conf/: config.extra.fast_mode.toml  config.toml
agents/mabool/api/conf/user_facing/: explain.toml  response_texts.toml  sorting.toml  step_progress_reporting.toml  verbalize.toml
agents/mabool/api/mabool/: conftest.py
agents/mabool/api/mabool/agents/broad_search_by_keyword/: broad_search_by_keyword_agent.py  broad_search_by_keyword_prompts.py
agents/mabool/api/mabool/agents/by_citing_papers/: broad_by_specific_paper_citation_agent.py
agents/mabool/api/mabool/agents/common/: common.py  domain_utils.py  explain.py  relevance_judgement_utils.py  sorting.py  step_reporting_utils.py  utils.py
agents/mabool/api/mabool/agents/common/computed_fields/: fields.py  relevance.py  relevance_types.py  relevant_snippets.py  test_relevant_snippets.py
agents/mabool/api/mabool/agents/complex_search/: broad_search.py  definitions.py  fast_broad_search.py
agents/mabool/api/mabool/agents/dense/: dense_agent.py  formulation.py  formulation_prompts.py  relevance_loading_optimization.py
agents/mabool/api/mabool/agents/llm_suggestion/: llm_suggestion_agent.py  llm_suggestion_prompts.py
agents/mabool/api/mabool/agents/metadata_only/: high.py  metadata_only_agent.py  metadata_planner_agent.py  ops.py  plan.py  test_plan.py
agents/mabool/api/mabool/agents/paper_finder/: anchor_docs.py  definitions.py  paper_finder_agent.py
agents/mabool/api/mabool/agents/query_analyzer/: anchor.py  extract_specifications.md  query_analyzer.py  query_analyzer_prompts.py  test_extract_specs.py  test_query_analyzer_prompts.py  verbalize.py
agents/mabool/api/mabool/agents/query_refusal/: utils.py
agents/mabool/api/mabool/agents/search_by_authors/: search_by_authors_agent.py  search_by_authors_prompts.py
agents/mabool/api/mabool/agents/snowball/: snippet_snowball.py  snowball_agent.py  snowball_utils.py
agents/mabool/api/mabool/agents/snowball/tests/: test_snippet_snowball.py
agents/mabool/api/mabool/agents/specific_paper_by_name/: specific_paper_by_name_agent.py
agents/mabool/api/mabool/agents/specific_paper_by_title/: specific_paper_by_title_agent.py  specific_paper_by_title_prompts.py
agents/mabool/api/mabool/api/: app.py  round_v2_routes.py  route_utils.py
agents/mabool/api/mabool/dal/: dal_deps.py
agents/mabool/api/mabool/data_model/: agent.py  aliases.py  config.py  ids.py  rounds.py  specifications.py  ufs.py
agents/mabool/api/mabool/external_api/: external_api_deps.py
agents/mabool/api/mabool/external_api/rerank/: cohere.py
agents/mabool/api/mabool/infra/operatives/: __init__.py  interaction.py  operatives.py
agents/mabool/api/mabool/infra/operatives/tests/: mock_app.py  test_interaction.py
agents/mabool/api/mabool/services/: prioritized_task.py  services_deps.py
agents/mabool/api/mabool/services/tests/: test_prioritized_task.py
agents/mabool/api/mabool/utils/: asyncio.py  context_deps.py  dc.py  dc_deps.py  file_based_cache.py  llm_utils.py  logging.py  metrics.py  paths.py  text.py  tracing_deps.py
agents/mabool/api/tests/: test_specifications.py
agents/mabool/api/typings/pympler/: tracker.pyi
agents/mabool/api/typings/pytest_snapshot/: _utils.pyi  plugin.pyi
agents/mabool/api/typings/semanticscholar/: ApiRequester.pyi  AsyncSemanticScholar.pyi  Author.pyi  BaseReference.pyi  Citation.pyi  Journal.pyi  PaginatedResults.pyi  Paper.pyi  PublicationVenue.pyi  Reference.pyi  SemanticScholar.pyi  SemanticScholarException.pyi  SemanticScholarObject.pyi  Tldr.pyi  __init__.pyi
dev/make/: common.mk  functions.mk  make_foreach.sh
dev/python/flake8_plugins/: stable_sort_checker.py
libs/chain/: .coveragerc  README.md  pyproject.toml  tach.toml
libs/chain/ai2i/chain/: __init__.py  builders.py  computation.py  endpoints.py  models.py
libs/chain/ai2i/chain/gemini/: async_genai.py
libs/chain/ai2i/chain/tests/: mocks.py  test_builders.py  test_computation.py  test_endpoints.py  test_models.py
libs/common/: .coveragerc  README.md  pyproject.toml  pytest.ini  tach.toml
libs/common/ai2i/common/tests/: test_batch.py
libs/common/ai2i/common/utils/: asyncio.py  batch.py  data_struct.py  time.py  value.py
libs/config/: .coveragerc  Makefile  README.md  pyproject.toml  pytest.ini  tach.toml
libs/config/ai2i/config/: __init__.py  common.py  config.py  config_models.py  conftest.py  gen_config_types.py  loading.py
libs/config/ai2i/config/tests/: config.py  test_config.py
libs/config/ai2i/config/tests/conf/: config.toml
libs/dcollection/: .coveragerc  Makefile  README.md  pyproject.toml  pytest.ini  tach.toml
libs/dcollection/ai2i/dcollection/: __init__.py  collection.py  computed_field.py  conftest.py  data_access_context.py  document.py  factory.py  sampling.py
libs/dcollection/ai2i/dcollection/caching/: cache.py
libs/dcollection/ai2i/dcollection/caching/tests/: test_cache.py
libs/dcollection/ai2i/dcollection/external_api/dense/: vespa.py
libs/dcollection/ai2i/dcollection/external_api/s2/: author.py  common.py
libs/dcollection/ai2i/dcollection/fetchers/: dense.py  s2.py
libs/dcollection/ai2i/dcollection/fusers/: fuse.py
libs/dcollection/ai2i/dcollection/interface/: collection.py  document.py
libs/dcollection/ai2i/dcollection/loaders/: adaptive.py  fields.py  s2_rest.py
libs/di/: .coveragerc  README.md  pyproject.toml  tach.toml
libs/di/ai2i/di/: __init__.py  app_context.py  config.py  conftest.py  context.py  integration.py  managed_env.py  modules.py  providers.py  resolver.py  rounds_storage.py  scopes.py  utils.py
libs/di/ai2i/di/factory/: app_context.py  modules.py
libs/di/ai2i/di/interface/: app_context.py  builtin_deps.py  errors.py  gateway.py  models.py  modules.py  round_storage.py  scopes.py  tasks.py
libs/di/ai2i/di/tests/: test_app_context.py  test_managed_env.py  test_utils.py
libs/di/conf/: config.toml
