[project]
name = "ai2i-agents"
version = "0.1.0"
requires-python = ">=3.12.8"
readme = "README.md"
dependencies = [
]

[tool.uv]
default-groups = ["types", "test", "tools"]
package = false

[dependency-groups]
types = [
]
test = [
    "pytest-asyncio~=0.25.0",
    "pytest-cov~=6.0.0",
    "pytest-env~=1.1.5",
    "pytest-snapshot~=0.9.0",
    "pytest-xdist~=3.6.1",
    "pytest~=8.3.4",
]
tools = [
    "ruff>=0.8.4",
    "flake8>=7.1.1",
    "tach>=0.21.0",
    "pyright~=1.1.398",
    "deptry~=0.23.0",
]

[tool.uv.sources]
mabool-api = { workspace = true }
ai2i-common = { workspace = true }
ai2i-chain = { workspace = true }
ai2i-config = { workspace = true }
ai2i-dcollection = { workspace = true }
ai2i-di = { workspace = true }
semanticscholar = { git = "https://github.com/allenai/s2-api-client.git" }
mabwiser = { git = "https://github.com/allenai/mabwiser.git" }

[tool.uv.workspace]
members = [
  "agents/mabool/api",
  "libs/*"
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMatchNotExhaustive = true
exclude = [".venv", ".github"]
