[project]
name = "ai2i-config"
version = "0.0.1"
requires-python = ">=3.12.8"
readme = "README.md"
dependencies = [
    "ai2i-common",
    "deepmerge==2.0",
    "python-dotenv~=1.0.1",
    "toml~=0.10.2",
]

[tool.uv]
default-groups = ["types", "test", "tools"]

[dependency-groups]
types = [
]
test = [
    "pytest-asyncio~=0.25.0",
    "pytest-cov~=6.0.0",
    "pytest-env~=1.1.5",
    "pytest-snapshot~=0.9.0",
    "pytest-xdist~=3.6.1",
    "pytest~=8.3.4",
]
tools = [
    "ruff>=0.8.4",
    "flake8>=7.1.1",
    "tach>=0.21.0",
    "pyright~=1.1.398",
    "deptry~=0.23.0",
]

[tool.deptry]
extend_exclude = [
  ".*\\/test_.*\\.py",
  ".*conftest.py"
]

[tool.deptry.per_rule_ignores]
DEP002 = ["ai2i-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai2i"]

