[project]
name = "ai2i-dcollection"
version = "0.0.1"
requires-python = ">=3.12.8"
readme = "README.md"
dependencies = [
    "ai2i-common",
    "aiocache~=0.12.3",
    "inflection~=0.5.1",
    "httpx~=0.28.1",
    "httpcore~=1.0.9",
    "langchain-core~=0.3.60",
    "mabwiser",
    "pydantic~=2.10.4",
    "semanticscholar",
    "pandas~=2.2.3",
    "tenacity~=9.1.2",
]

[tool.uv]
default-groups = ["dev", "types", "test", "tools"]

[dependency-groups]
dev = [
]
types = [
]
test = [
    "pytest-asyncio~=0.25.0",
    "pytest-cov~=6.0.0",
    "pytest-env~=1.1.5",
    "pytest-xdist~=3.6.1",
    "pytest-snapshot~=0.9.0",
    "pytest~=8.3.4",
]
tools = [
    "ruff>=0.8.4",
    "flake8>=7.1.1",
    "tach>=0.21.0",
    "pyright~=1.1.398",
    "deptry~=0.23.0",
]

[tool.deptry]
extend_exclude = [
  ".*\\/test_.*\\.py",
  ".*conftest.py"
]

[tool.deptry.per_rule_ignores]
DEP002 = ["ai2i-common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai2i"]

[tool.ruff]
extend = "../../ruff.toml"
